# FLAMEGPU2_dev

./: CMakeLists.txt  README.md
.github/scripts/: install_cuda_centos.sh  install_cuda_ubuntu.sh  install_cuda_windows.ps1
.github/workflows/: Draft-Release.yml  Manylinux_2_28.yml  Windows-Tests.yml
cmake/: CheckCompilerFunctionality.cmake
cmake/dependencies/: Jitify.cmake
examples/cpp/host_functions/: CMakeLists.txt
examples/cpp/host_functions/src/: main.cu  model.cu
examples/cpp/source_group_testing_above_tree/inner/: CMakeLists.txt  main.h
examples/cpp/source_group_testing_no_src/: CMakeLists.txt
include/flamegpu/detail/: JitifyCache.h  cuda.cuh
include/flamegpu/runtime/detail/curve/: curve_rtc.cuh
include/flamegpu/simulation/: CUDASimulation.h
include/flamegpu/simulation/detail/: CUDAAgent.h  CUDAScanCompaction.h
src/: CMakeLists.txt
src/flamegpu/detail/: JitifyCache.cu
src/flamegpu/model/: AgentFunctionDescription.cpp
src/flamegpu/runtime/detail/curve/: curve_rtc.cpp
src/flamegpu/simulation/: CUDASimulation.cu
src/flamegpu/simulation/detail/: CUDAAgent.cu
tests/test_cases/runtime/messaging/: test_spatial_2d.cu
